java-mong-project/k8s/java-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: project-a
  labels:
    app: javapp
    environment: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: javaapp
      environment: dev
  template:
    metadata:
      labels:
        app: javaapp
        environment: dev
    spec:
      containers:
        - name: javacontainer
          image: 017341176608.dkr.ecr.us-east-1.amazonaws.com/java:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
              name: webport
