java-mong-project/k8s/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: project-a
spec:
  serviceName: "mongo"
  replicas: 2
  selector:
    matchLabels:
      app: mongo
      environment: dev
  template:
    metadata:
      labels:
        app: mongo
        environment: dev
    spec:
      containers:
        - name: mongo
          image: 017341176608.dkr.ecr.us-east-1.amazonaws.com/mongo:latest
          ports:
            - containerPort: 27017
              name: mongoport
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-persistent-storage
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: gp3
        resources:
          requests:
            storage: 5Gi
