java-mong-project/k8s/mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: project-a
spec:
  clusterIP: None
  ports:
  - name: mongoport
    protocol: TCP
    port: 27017
    targetPort: 27017
  selector:
    app: mongo
    environment: dev
